sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:3: error: '=' expected but ';' found.
var echangerUn = true
^AlgCocktailSort1:12: error: ';' expected but 'if' found.
  }if (agitUn == 0) {
   ^AlgCocktailSort1:20: error: ';' expected but 'if' found.
  }if (agitDeux == 0) {
   ^